--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-tidgi",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Eslint config fot TidGi and its plugins, with many eslint plugins to perform auto-fix.",
   "homepage": "https://github.com/tiddly-gittly/eslint-config-tidgi",
   "bugs": "https://github.com/tiddly-gittly/eslint-config-tidgi/issues",
@@ -50,7 +50,8 @@
     "typescript": "^5"
   },
   "peerDependencies": {
-    "typescript": "^4 || ^5"
+    "typescript": "^4 || ^5",
+    "eslint": "8.43.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
