--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-tidgi",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Eslint config fot TidGi and its plugins, with many eslint plugins to perform auto-fix.",
   "homepage": "https://github.com/tiddly-gittly/eslint-config-tidgi",
   "bugs": "https://github.com/tiddly-gittly/eslint-config-tidgi/issues",
@@ -25,7 +25,7 @@
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
     "dprint": "^0.37.1",
-    "eslint": "8.43.0",
+    "eslint": "^8.43.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "35.0.0",
     "eslint-import-resolver-alias": "1.1.2",
@@ -50,7 +50,9 @@
     "typescript": "^5"
   },
   "peerDependencies": {
-    "typescript": "^4 || ^5",
+    "typescript": "^4 || ^5"
+  },
+  "overrides": {
     "eslint": "8.43.0"
   },
   "publishConfig": {
