--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-tidgi",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Eslint config fot TidGi and its plugins, with many eslint plugins to perform auto-fix.",
   "homepage": "https://github.com/tiddly-gittly/eslint-config-tidgi",
   "bugs": "https://github.com/tiddly-gittly/eslint-config-tidgi/issues",
@@ -52,8 +52,10 @@
   "peerDependencies": {
     "typescript": "^4 || ^5"
   },
-  "overrides": {
-    "eslint": "8.43.0"
+  "pnpm": {
+    "overrides": {
+      "eslint": "8.43.0"
+    }
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
