--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-tidgi",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Eslint config fot TidGi and its plugins, with many eslint plugins to perform auto-fix.",
   "homepage": "https://github.com/tiddly-gittly/eslint-config-tidgi",
   "bugs": "https://github.com/tiddly-gittly/eslint-config-tidgi/issues",
@@ -54,7 +54,12 @@
   },
   "pnpm": {
     "overrides": {
-      "eslint": "8.43.0"
+      "eslint": "$eslint"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "eslint": "$eslint"
+      }
     }
   },
   "publishConfig": {
