--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-tidgi",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "Eslint config fot TidGi and its plugins, with many eslint plugins to perform auto-fix.",
   "homepage": "https://github.com/tiddly-gittly/eslint-config-tidgi",
   "bugs": "https://github.com/tiddly-gittly/eslint-config-tidgi/issues",
@@ -22,35 +22,35 @@
     "check": "eslint-find-rules --unused index.js"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "5.60.0",
-    "@typescript-eslint/parser": "5.60.0",
-    "dprint": "^0.37.1",
-    "eslint": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "7.1.0",
+    "@typescript-eslint/parser": "7.1.0",
+    "dprint": "^0.45.0",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "35.0.0",
+    "eslint-config-standard-with-typescript": "43.0.1",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-autofix": "^1.1.0",
     "eslint-plugin-dprint-integration": "^0.3.0",
-    "eslint-plugin-html": "7.1.0",
-    "eslint-plugin-import": "npm:eslint-plugin-i@2.27.5-4",
-    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-html": "8.0.0",
+    "eslint-plugin-import": "npm:eslint-plugin-i@2.29.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-security": "1.7.1",
-    "eslint-plugin-security-node": "1.1.1",
-    "eslint-plugin-typescript-sort-keys": "2.3.0",
-    "eslint-plugin-unicorn": "47.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0"
+    "eslint-plugin-security": "2.1.1",
+    "eslint-plugin-security-node": "1.1.4",
+    "eslint-plugin-typescript-sort-keys": "3.2.0",
+    "eslint-plugin-unicorn": "51.0.1",
+    "eslint-plugin-unused-imports": "^3.1.0"
   },
   "devDependencies": {
     "eslint-find-rules": "^4.1.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "typescript": "^4 || ^5"
+    "typescript": "^5.3.3"
   },
   "pnpm": {
     "overrides": {
