--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "eslint-plugin-security-node": "1.1.4",
     "eslint-plugin-typescript-sort-keys": "3.2.0",
     "eslint-plugin-unicorn": "51.0.1",
-    "eslint-plugin-unused-imports": "^3.1.0"
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "typescript-eslint": "^8.28.0"
   },
   "devDependencies": {
     "@modern-js/tsconfig": "^2.66.0",
@@ -70,5 +71,12 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
+  },
+  "type": "module",
+  "files": [
+    "index.js"
+  ],
+  "exports": {
+    ".": "./index.js"
   }
 }
