--- a/package.json
+++ b/package.json
@@ -19,38 +19,40 @@
     "typescript"
   ],
   "scripts": {
+    "update": "npm-check-updates -u && dprint config update",
     "check": "eslint-find-rules --unused index.js"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "7.1.0",
-    "@typescript-eslint/parser": "7.1.0",
-    "dprint": "^0.45.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "8.28.0",
+    "@typescript-eslint/parser": "8.28.0",
+    "dprint": "^0.49.1",
+    "eslint": "^9.23.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "43.0.1",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-autofix": "^1.1.0",
+    "eslint-import-resolver-typescript": "4.3.1",
+    "eslint-plugin-autofix": "^2.2.0",
     "eslint-plugin-dprint-integration": "^0.3.0",
-    "eslint-plugin-html": "8.0.0",
-    "eslint-plugin-import": "npm:eslint-plugin-i@2.29.1",
-    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-html": "8.1.2",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-n": "^17.17.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-security": "2.1.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-security": "3.0.1",
     "eslint-plugin-security-node": "1.1.4",
-    "eslint-plugin-typescript-sort-keys": "3.2.0",
-    "eslint-plugin-unicorn": "51.0.1",
-    "eslint-plugin-unused-imports": "^3.1.0",
+    "eslint-plugin-typescript-sort-keys": "3.3.0",
+    "eslint-plugin-unicorn": "58.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "typescript-eslint": "^8.28.0"
   },
   "devDependencies": {
     "@modern-js/tsconfig": "^2.66.0",
-    "eslint-find-rules": "^4.1.0",
+    "eslint-find-rules": "^5.0.0",
     "eslint-plugin-format": "^1.0.1",
-    "typescript": "^5.3.3"
+    "npm-check-updates": "^17.1.16",
+    "typescript": "^5.8.2"
   },
   "peerDependencies": {
     "typescript": "^5.3.3"
